# scratch

./: .gitignore  AGENTS.md  AUTOTIKTOKENIZER_SUMMARY.md  CONVERTER_FIX.md  HF_TO_TIKTOKEN_GUIDE.md  README.md  demo_autotiktokenizer.py  demo_hf_to_tiktoken.py  test_autotiktokenizer.py  test_hf_to_tiktoken.py  test_hf_transparent_tiktoken.py  test_tiktoken_chickens.py
autotiktokenizer/: README.md  __init__.py  converter.py  core.py  example.py  pyproject.toml
gzip-bench/: .gitignore  benchmark_100.txt  benchmark_1000.txt  benchmark_10000.txt  gzip_benchmark.py  pyproject.toml
jax_bare/: main.py  pallas_backend.py  pyproject.toml  test_transformer_pallas.py  transform.py  transformer.py  transformer_pallas.py
jax_bare/kernels/: __init__.py  broadcast.py  elementwise.py  gelu.py  matmul.py  mean.py  reduce.py  reshape.py  softmax.py  transpose.py  var.py  where.py
json-bench/: .gitignore  README.md  pyproject.toml
json-bench/examples/: json_vs_msgpack_comparison.py  msgspec_example.py  pickle_protocols_analysis.py
json-bench/src/json_bench/: __init__.py  benchmarks.py  cli.py  data_generator.py  visualize.py
msgspec-dataclass-test/: README.md  pyproject.toml  test_dataclass_roundtrip.py
tokenizer_bench/: README_BENCHMARK.md  README_KITOKEN_TEST.md  test_kitoken_evaluation.py  tokenizer_benchmark.py  tokenizer_benchmark_simple.py
